--- a/AmRestFeedback/Views/_ViewImports.cshtml
+++ b/AmRestFeedback/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using AmRestFeedback.Models.AccountViewModels
 @using AmRestFeedback.Models.ManageViewModels
 @using AmRestFeedback.Models.HomeViewModels
+@using AmRestFeedback.Models.UsersViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
